--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@
             <h3 class="font-poppins">Escritório Arcoverde</h3>
             <ul>
               <li>
-                <p class="font-poppins icon-endereco">R. Francisco Leonardo Filho, 401</p>
+                <p class="font-poppins icon-endereco buique">R. Francisco Leonardo Filho, 401</p>
               </li>
               <li>
                 <p class="font-poppins icon-cidade">Arcoverde-PE</p>
               </li>
               <li>
-                <p class="font-poppins icon-cidade">CEP 56509240</p>
+                <p class="font-poppins icon-cidade">CEP 56509-240</p>
               </li>
               <li>
                 <p class="font-poppins icon-tel">(87)9999999</p>
