--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               <p class="font-poppins icon-endereco">Av. Jonas Camelo de Almeida, 146</p>
             </li>
             <li>
-              <p class="font-poppins icon-cidade">Buíque-PE</p>
+              <p class="font-poppins buique">Buíque-PE</p>
             </li>
             <li>
               <p class="font-poppins icon-cidade">CEP 56520-000</p>
@@ -227,7 +227,7 @@
             <h3 class="font-poppins">Escritório Arcoverde</h3>
             <ul>
               <li>
-                <p class="font-poppins icon-endereco buique">R. Francisco Leonardo Filho, 401</p>
+                <p class="font-poppins icon-endereco">R. Francisco Leonardo Filho, 401</p>
               </li>
               <li>
                 <p class="font-poppins icon-cidade">Arcoverde-PE</p>
