--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <h3 class="font-poppins">Escritório Buíque</h3>
           <ul>
             <li>
-              <p class="font-poppins icon-endereco">Av. Jonas Camelo de Almeida, 146</p>
+              <p class="font-poppins icon-endereco">Av. Jonas Camelo de Almeida-146</p>
             </li>
             <li>
               <p class="font-poppins buique">Buíque-PE</p>
@@ -227,7 +227,7 @@
             <h3 class="font-poppins">Escritório Arcoverde</h3>
             <ul>
               <li>
-                <p class="font-poppins icon-endereco">R. Francisco Leonardo Filho, 401</p>
+                <p class="font-poppins icon-endereco">R. Francisco Leonardo Filho-401</p>
               </li>
               <li>
                 <p class="font-poppins icon-cidade">Arcoverde-PE</p>
@@ -244,7 +244,6 @@
       </div>
     </div>
   </section>
-  aa
   <script type="module" src="./js/script.js"></script>
 </body>
 
