--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               <p class="font-poppins icon-cidade">CEP 56520-000</p>
             </li>
             <li>
-              <p class="font-poppins icon-tel">(87)9999999</p>
+              <p class="font-poppins icon-tel">(87)99999-9999</p>
             </li>
           </ul>
         </div>
@@ -230,13 +230,13 @@
                 <p class="font-poppins icon-endereco">R. Francisco Leonardo Filho-401</p>
               </li>
               <li>
-                <p class="font-poppins icon-cidade">Arcoverde-PE</p>
+                <p class="font-poppins arcoverde">Arcoverde-PE</p>
               </li>
               <li>
                 <p class="font-poppins icon-cidade">CEP 56509-240</p>
               </li>
               <li>
-                <p class="font-poppins icon-tel">(87)9999999</p>
+                <p class="font-poppins icon-tel">(87)99999-9999</p>
               </li>
             </ul>
           </div>
