--- a/index.html
+++ b/index.html
@@ -53,39 +53,39 @@
   <section class="area-atuacao-bg area-atuacao">
     <ul class="area-atuacao-lista container" id="area-atuacao">
       <li>
-        <img src="icons/saldo-escala-esquerda.png" alt="icon">
-        <h1 class="font-poppins cor-4">Previdenciário</h1>
+        <img src="icons/icon-balance.png" alt="icon">
+        <h1 class="font-poppins cor-5">Previdenciário</h1>
         <p class="font-poppins cor-0 ">Aposentadoria Por Tempo de Serviço</p>
         <p class="font-poppins cor-0 ">Auxílio Doença</p>
         <p class="font-poppins cor-0">Aposentadoria por Idade</p>
         <p class="font-poppins cor-0">Aposentadoria Rural Loas/BPC</p>
       </li>
       <li>
-        <img src="icons/saldo-escala-esquerda.png" alt="icon">
-        <h1 class="font-poppins cor-4">Criminal</h1>
+        <img src="icons/icon-balance.png" alt="icon">
+        <h1 class="font-poppins cor-5">Criminal</h1>
         <p class="font-poppins cor-0 ">Flagrante delito</p>
         <p class="font-poppins cor-0 ">Audiência de custódia</p>
         <p class="font-poppins cor-0">Inquérito policial</p>
         <p class="font-poppins cor-0">Transação Penal e Suspensão Condicional do Processo</p>
       </li>
       <li>
-        <img src="icons/saldo-escala-esquerda.png" alt="icon">
-        <h1 class="font-poppins cor-4">Inventário e Herança</h1>
+        <img src="icons/icon-balance.png" alt="icon">
+        <h1 class="font-poppins cor-5">Inventário e Herança</h1>
         <p class="font-poppins cor-0 ">Divisão entre os Herdeiros</p>
         <p class="font-poppins cor-0 ">Solução de Conflitos</p>
         <p class="font-poppins cor-0">Regularização dos Documentos</p>
         <p class="font-poppins cor-0">Valorização dos Bens na Hora da Venda</p>
       </li>
       <li>
-        <img src="icons/saldo-escala-esquerda.png" alt="icon">
-        <h1 class="font-poppins cor-4">Trabalhista</h1>
+        <img src="icons/icon-balance.png" alt="icon">
+        <h1 class="font-poppins cor-5">Trabalhista</h1>
         <p class="font-poppins cor-0 ">Trabalho sem Registro</p>
         <p class="font-poppins cor-0 ">Dano Moral e Material</p>
         <p class="font-poppins cor-0">Insalubridade/Periculosidade</p>
         <p class="font-poppins cor-0">Acidente de Trabalho</p>
       </li>
       <li>
-        <img src="icons/saldo-escala-esquerda.png" alt="icon">
+        <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Tributário</h1>
         <p class="font-poppins cor-0 ">Análise de incentivos fiscais (obter incentivos fiscais)</p>
         <p class="font-poppins cor-0 ">Assessoria em procedimentos de fiscalização</p>
@@ -93,7 +93,7 @@
         <p class="font-poppins cor-0">Planejamento tributário</p>
       </li>
       <li>
-        <img src="icons/saldo-escala-esquerda.png" alt="icon">
+        <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Empresarial</h1>
         <p class="font-poppins cor-0 ">Constituição da empresa</p>
         <p class="font-poppins cor-0 ">Reestruturação Societária</p>
@@ -101,7 +101,7 @@
         <p class="font-poppins cor-0">Criação de estruturas de proteção patrimonial</p>
       </li>
       <li>
-        <img src="icons/saldo-escala-esquerda.png" alt="icon">
+        <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Cobrança Judicial</h1>
         <p class="font-poppins cor-0 ">Cobrança de Condomínios e Empresas</p>
         <p class="font-poppins cor-0 ">Recuperação de Valores</p>
@@ -109,7 +109,7 @@
         <p class="font-poppins cor-0">Cobranças de Cheques e Duplicatas</p>
       </li>
       <li>
-        <img src="icons/saldo-escala-esquerda.png" alt="icon">
+        <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Divórcio</h1>
         <p class="font-poppins cor-0 ">Divorcio amigável em Cartório</p>
         <p class="font-poppins cor-0 ">Divorcio Litigioso Judicial</p>
@@ -195,9 +195,9 @@
   <section class="contato-bg">
     <div class="contato-conteudo container">
       <p class="font-poppins cor-4">Como chegar</p>
-      <h1 class="font-poppins cor-1">Nossos Endereços</h1>
+      <h1 class="font-poppins cor-0">Nossos Endereços</h1>
       <div class="iframe-grid">
-        <div class="iframe-1">
+        <div class="iframe-1 cor-0">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d986.1837813209066!2d-37.1556076!3d-8.6214082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x707fba65fecc31d%3A0xc0a412beb4b2ca48!2sCARLOS%20ARA%C3%9AJO%20ADVOCACIA!5e0!3m2!1spt-BR!2sbr!4v1721342106313!5m2!1spt-BR!2sbr"
             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -218,7 +218,7 @@
             </li>
           </ul>
         </div>
-        <div class="iframe-2">
+        <div class="iframe-2 cor-0">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d986.6990846883765!2d-37.0598041413136!3d-8.421652099968767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a81bd4b9cf407f%3A0x83cfa429ae68458d!2sCARLOS%20AR%C3%81UJO%20ADVOCACIA!5e0!3m2!1spt-BR!2sbr!4v1721342185079!5m2!1spt-BR!2sbr"
             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
