--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#serviços">Serviços</a></li>
               </ul>
             </li>
-            <li><a href="./">Contato</a></li>
+            <li><a href="#contato">Contato</a></li>
           </ul>
         </nav>
       </div>
@@ -193,7 +193,7 @@
 
 
   <section class="contato-bg">
-    <div class="contato-conteudo container">
+    <div class="contato-conteudo container" id="contato">
       <p class="font-poppins cor-4">Como chegar</p>
       <h1 class="font-poppins cor-1">Nossos Endereços</h1>
       <div class="iframe-grid">
