--- a/index.html
+++ b/index.html
@@ -244,6 +244,23 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer-bg">
+    <div class="footer-conteudo container">
+      <div class="footer-logo"><img src="./icons/logo.png" alt=""></div>
+      <div class="footer-contato">
+        <h1 class="font-poppins cor-0">contatos</h1>
+        <p class="font-poppins cor-0">(87)99999-9999</p>
+        <p class="font-poppins cor-0">(87)99999-9999</p>
+        <p class="font-poppins cor-0">contato@hotmail.com</p>
+      </div>
+      <div class="footer-redes">
+        <img src="icons/icon-zap-3.png" alt="">
+        <img src="icons/icon-instagram.png" alt="">
+        <img src="icons/icon-email.png" alt="">
+      </div>
+    </div>
+  </footer>
   <script type="module" src="./js/script.js"></script>
 </body>
 
