--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
         <p class="font-poppins cor-0">contato@hotmail.com</p>
       </div>
       <div class="footer-redes">
-        <img src="icons/icon-zap-3.png" alt="">
-        <img src="icons/icon-instagram.png" alt="">
-        <img src="icons/icon-email.png" alt="">
+        <img src="icons/icon-zap-5.png" alt="">
+        <img src="icons/icon-instagram-5.png" alt="">
+        <img src="icons/icon-email-2.png" alt="">
       </div>
     </div>
   </footer>
