--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
             <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
             <p class="font-poppins">Especialista em direito criminal</p>
             <div class="contato-pessoal">
-              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap.png" alt="zap"></a>
-              <a href="#" target="_blank"><img src="icons/icon-instagram.png" alt="instagram"></a>
-              <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
+              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+              <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
             </div>
           </div>
         </li>
@@ -166,9 +166,9 @@
             <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
             <p class="font-poppins">Especialista em direito previdenciário</p>
             <div class="contato-pessoal">
-              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap.png" alt="zap"></a>
-              <a href="#" target="_blank"><img src="icons/icon-instagram.png" alt="instagram"></a>
-              <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
+              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+              <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
             </div>
           </div>
           <div class="grid-colum-2"><img src="images/advg-2.jpeg" alt="advogado"></div>
@@ -255,9 +255,9 @@
         <p class="font-poppins cor-0">contato@hotmail.com</p>
       </div>
       <div class="footer-redes">
-        <img src="icons/icon-zap-5.png" alt="">
-        <img src="icons/icon-instagram-5.png" alt="">
-        <img src="icons/icon-email-2.png" alt="">
+        <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+        <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
+        <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
       </div>
     </div>
   </footer>
