--- a/index.html
+++ b/index.html
@@ -191,6 +191,26 @@
     </div>
   </section>
 
+  <section class="faq-bg">
+    <div class="faq-conteudo container">
+      <h1 class="font-poppins cor-1">Perguntas Frequentes</h1>
+      <dl class="faq-lista">
+        <dt class="dt-pergunta font-poppins cor-5" data-faq="pergunta">Como são determinadas as circunstâncias <br> agravantes e atenuantes em um julgamento criminal?
+        </dt> 
+        <dd class="dd-resposta font-poppins cor-1">Refere-se ao processo pelo qual o juiz ou júri considera fatores adicionais que podem aumentar (agravantes) ou reduzir (atenuantes) a gravidade de um crime durante o julgamento.</dd>
+
+        <dt class="dt-pergunta font-poppins cor-5" data-faq="pergunta">Qual é a diferença entre aposentadoria <br> por tempo de contribuição e aposentadoria por invalidez?</dt>
+        <dd class="dd-resposta font-poppins"> a aposentadoria por tempo de contribuição está relacionada ao tempo de serviço do trabalhador, enquanto a aposentadoria por invalidez é voltada para aqueles que não podem mais trabalhar devido a problemas de saúde. A primeira depende do cumprimento de requisitos de contribuição, enquanto a segunda se baseia em comprovação de incapacidade.</dd>
+
+        <dt class="dt-pergunta font-poppins cor-5" data-faq="pergunta">Quais são os direitos garantidos aos trabalhadores <br> em caso de demissão sem justa causa?</dt>
+        <dd class="dd-resposta font-poppins">Os direitos garantidos aos trabalhadores em caso de demissão sem justa causa visam proporcionar uma rede de segurança financeira e facilitar a transição para um novo emprego. É importante que tanto empregadores quanto empregados estejam cientes desses direitos para garantir o cumprimento da legislação trabalhista vigente. Se tiver mais dúvidas ou precisar de informações adicionais, sinta-se à vontade para perguntar!.</dd>
+
+        <dt class="dt-pergunta font-poppins cor-5" data-faq="pergunta">Como é feita a partilha de bens <br> em um divórcio consensual e litigioso?</dt>
+        <dd class="dd-resposta font-poppins">A partilha de bens em um divórcio pode variar significativamente dependendo do tipo de divórcio (consensual ou litigioso) e do regime de bens adotado no casamento. Enquanto o divórcio consensual oferece uma abordagem mais amigável e flexível, o divórcio litigioso pode ser necessário quando há disputas significativas entre as partes. Em ambos os casos, é essencial contar com orientação legal adequada para assegurar que os direitos de todos os envolvidos sejam respeitados.</dd>
+      </dl>
+    </div>
+  </section>
+
 
   <section class="contato-bg">
     <div class="contato-conteudo container" id="contato">
