--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li><a href="#escritorio">Escritório</a></li>
                 <li><a href="#equipe">Equipe</a></li>
                 <li><a href="#serviços">Serviços</a></li>
+                <li><a href="#faq">Faq</a></li>
               </ul>
             </li>
             <li><a href="#contato">Contato</a></li>
@@ -192,7 +193,7 @@
   </section>
 
   <section class="faq-bg">
-    <div class="faq-conteudo container">
+    <div class="faq-conteudo container" id="faq">
       <h1 class="font-poppins cor-1">Perguntas Frequentes</h1>
       <dl class="faq-lista">
         <dt class="dt-pergunta font-poppins cor-6" data-faq="pergunta">Como são determinadas as circunstâncias <br> agravantes e atenuantes em um julgamento criminal?
