--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="icons/logo2.png" type="image/x-icon">
   <link rel="stylesheet" href="estilos/style.css">
   <script>document.documentElement.className += ' js';</script>
@@ -196,7 +197,7 @@
     <div class="faq-conteudo container" id="faq">
       <h1 class="font-poppins cor-1">Perguntas Frequentes</h1>
       <dl class="faq-lista">
-        <dt class="dt-pergunta font-poppins cor-6" data-faq="pergunta">Como são determinadas as circunstâncias <br> agravantes e atenuantes em um julgamento criminal?
+        <dt class="dt-pergunta cor-6" data-faq="pergunta">Como são determinadas as circunstâncias <br> agravantes e atenuantes em um julgamento criminal?
         </dt> 
         <dd class="dd-resposta font-poppins cor-1">Refere-se ao processo pelo qual o juiz ou júri considera fatores adicionais que podem aumentar (agravantes) ou reduzir (atenuantes) a gravidade de um crime durante o julgamento.</dd>
 
