--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="introducao-conteudo container">
       <span class="font-poppins span-oab">OAB/PE -000.00 - PE</span>
       <p class="font-poppins">Mais de 10 anos defendendo seus direitos com respeito e transparência.</p>
-      <a href="./"><button class="btn1 font-poppins">Agendar Agora <span>(Escritório Buíque)</span></button></a>
-      <a href="./"><button class="btn2 font-poppins">Agendar Agora <span>(Escritório Arcoverde)</span></button></a>
+      <a href="./"><button class="btn1 font-poppins">Agendar <span>(Escritório Buíque)</span></button></a>
+      <a href="./"><button class="btn2 font-poppins">Agendar <span>(Escritório Arcoverde)</span></button></a>
       <div class="orcamento">
         <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
       </div>
@@ -156,6 +156,12 @@
             <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
             <p class="font-poppins">Especialista em direito criminal</p>
             <div class="contato-pessoal">
+              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+              <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+            </div>
+            <div class="contato-pessoal">
+              <p>Arcoverde</p>
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
               <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
