--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
           objetivo é garantir seu conforto e segurança, tendo a certeza de que seu caso está nas mãos de profissionais
           competentes. Estamos prontos para oferecer a representação jurídica necessária e buscar as melhores soluções
           para suas demandas legais.</p>
-        <a href="./"><button class="btn1 font-poppins">Agendar Agora</button></a>
+          <a href="./"><button class="btn1 font-poppins">Agendar <span>(Escritório Buíque)</span></button></a>
+          <a href="./"><button class="btn2 font-poppins">Agendar <span>(Escritório Arcoverde)</span></button></a>
       </div>
     </div>
   </section>
