--- a/index.html
+++ b/index.html
@@ -177,6 +177,13 @@
             <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
             <p class="font-poppins">Especialista em direito previdenciário</p>
             <div class="contato-pessoal">
+              <p class="font-montserrat">Contato Buíque</p>
+                <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+                <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
+                <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+            </div>
+            <div class="contato-pessoal">
+              <p class="font-montserrat">Contato Arcoverde</p>
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
               <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
@@ -192,6 +199,13 @@
             <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
             <p class="font-poppins">Especialista em direito trabalhista</p>
             <div class="contato-pessoal">
+              <p class="font-montserrat">Contato Buíque</p>
+                <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+                <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
+                <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+            </div>
+            <div class="contato-pessoal">
+              <p class="font-montserrat">Contato Arcoverde</p>
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
               <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
