--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div>
           <a href="./"><img class="logo" src="icons/logo.png" alt="logo"></a>
         </div>
-        <nav class="header-menu">
+        <nav class="header-menu" data-menu="suave">
           <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
           <ul class="font-poppins" data-menu="list">
             <li><a href="#area-atuacao">Área de Atuação</a></li>
@@ -53,7 +53,7 @@
     </div>
   </section>
 
-  <section class="area-atuacao-bg area-atuacao">
+  <section class="area-atuacao-bg area-atuacao" data-anime="scroll">
     <ul class="area-atuacao-lista container" id="area-atuacao">
       <li>
         <img src="icons/icon-balance.png" alt="icon">
@@ -122,7 +122,7 @@
     </ul>
   </section>
 
-  <section class="escritorio-bg container" id="escritorio">
+  <section class="escritorio-bg container" id="escritorio" data-anime="scroll">
     <div class="escritorio-conteudo">
       <div><img src="images/escritorio-1.jpeg" alt="escritorio"></div>
       <div>
@@ -146,7 +146,7 @@
     </div>
   </section>
 
-  <section class="equipe-bg">
+  <section class="equipe-bg" data-anime="scroll">
     <div class="equipe-conteudo container" id="equipe">
       <h1 class="font-poppins cor-0">Equipe</h1>
       <ul class="equipe-advg">
@@ -216,7 +216,7 @@
     </div>
   </section>
 
-  <section class="faq-bg">
+  <section class="faq-bg" data-anime="scroll">
     <div class="faq-conteudo container" id="faq">
       <h1 class="font-poppins cor-1">Perguntas Frequentes</h1>
       <dl class="faq-lista">
@@ -237,7 +237,7 @@
   </section>
 
 
-  <section class="contato-bg">
+  <section class="contato-bg" data-anime="scroll">
     <div class="contato-conteudo container" id="contato">
       <p class="font-montserrat cor-4">Como chegar</p>
       <h1 class="font-poppins cor-1">Nossos Endereços</h1>
@@ -295,9 +295,11 @@
       <div class="footer-logo"><img src="./icons/logo.png" alt=""></div>
       <div class="footer-contato">
         <h1 class="font-poppins cor-0">contatos</h1>
-        <p class="font-poppins cor-0">(87)99999-9999</p>
-        <p class="font-poppins cor-0">(87)99999-9999</p>
-        <p class="font-poppins cor-0">contato@hotmail.com</p>
+        <ul>
+          <p class="font-poppins cor-0">(87)99999-9999</p>
+          <p class="font-poppins cor-0">(87)99999-9999</p>
+          <p class="font-poppins cor-0">contato@hotmail.com</p>
+        </ul>
       </div>
       <div class="footer-redes">
         <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
