--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
   </section>
 
-  <section class="area-atuacao-bg area-atuacao" data-anime="scroll">
+  <section class="area-atuacao-bg area-atuacao">
     <ul class="area-atuacao-lista container" id="area-atuacao">
       <li>
         <img src="icons/icon-balance.png" alt="icon">
@@ -122,10 +122,10 @@
     </ul>
   </section>
 
-  <section class="escritorio-bg container" id="escritorio" data-anime="scroll">
+  <section class="escritorio-bg container" id="escritorio">
     <div class="escritorio-conteudo">
-      <div><img src="images/escritorio-1.jpeg" alt="escritorio"></div>
-      <div>
+      <div><img src="images/escritorio-1.jpeg" alt="escritorio" data-anime="scroll-left"></div>
+      <div data-anime="scroll-right">
         <p class="font-montserrat cor-3">Escritório</p>
         <h1 class="font-poppins">Bem-vindo a Carlos Araújo Advocacia</h1>
         <p class="font-poppins">Com mais de 10 anos de experiência no campo jurídico, a Carlos Araújo Advocacia
@@ -146,24 +146,24 @@
     </div>
   </section>
 
-  <section class="equipe-bg" data-anime="scroll">
+  <section class="equipe-bg">
     <div class="equipe-conteudo container" id="equipe">
       <h1 class="font-poppins cor-0">Equipe</h1>
       <ul class="equipe-advg">
         <li>
-          <div><img src="images/advg-1.jpeg" alt="advogado"></div>
-          <div class="equipe-advg-conteudo">
+          <div><img src="images/advg-1.jpeg"  data-anime="scroll-up" alt="advogado"></div>
+          <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Dr. Carlos Araújo</h1>
             <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
             <p class="font-poppins">Especialista em direito criminal</p>
             <div class="contato-pessoal-buique">
-              <p class="font-montserrat">Buíque</p>
+              <p class="font-montserrat">Buíque-PE</p>
                 <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
                 <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
                 <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
             </div>
             <div class="contato-pessoal-arcoverde">
-              <p class="font-montserrat">Arcoverde</p>
+              <p class="font-montserrat">Arcoverde-PE</p>
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
               <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
@@ -172,40 +172,40 @@
         </li>
 
         <li>
-          <div class=" equipe-advg-conteudo-colum-2">
+          <div class=" equipe-advg-conteudo-colum-2" data-anime="scroll-down">
             <h1 class="font-poppins cor-1">Dr. Matheus Barros</h1>
             <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
             <p class="font-poppins">Especialista em direito previdenciário</p>
             <div class="contato-pessoal-buique">
-              <p class="font-montserrat">Buíque</p>
+              <p class="font-montserrat">Buíque-PE</p>
                 <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
                 <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
                 <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
             </div>
             <div class="contato-pessoal-arcoverde">
-              <p class="font-montserrat">Arcoverde</p>
+              <p class="font-montserrat">Arcoverde-PE</p>
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
               <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
             </div>
           </div>
-          <div class="grid-colum-2"><img src="images/advg-2.jpeg" alt="advogado"></div>
+          <div class="grid-colum-2"><img src="images/advg-2.jpeg" data-anime="scroll-up" alt="advogado"></div>
         </li>
 
         <li>
-          <div><img src="images/advg-3.jpeg" alt="advogado"></div>
-          <div class="equipe-advg-conteudo">
+          <div><img src="images/advg-3.jpeg" data-anime="scroll-up" alt="advogado"></div>
+          <div class="equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Dra. Josivânia Siqueira</h1>
             <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
             <p class="font-poppins">Especialista em direito trabalhista</p>
             <div class="contato-pessoal-buique">
-              <p class="font-montserrat">Buíque</p>
+              <p class="font-montserrat">Buíque-PE</p>
                 <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
                 <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
                 <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
             </div>
             <div class="contato-pessoal-arcoverde">
-              <p class="font-montserrat">Arcoverde</p>
+              <p class="font-montserrat">Arcoverde-PE</p>
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
               <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
@@ -216,7 +216,7 @@
     </div>
   </section>
 
-  <section class="faq-bg" data-anime="scroll">
+  <section class="faq-bg">
     <div class="faq-conteudo container" id="faq">
       <h1 class="font-poppins cor-1">Perguntas Frequentes</h1>
       <dl class="faq-lista">
@@ -237,13 +237,13 @@
   </section>
 
 
-  <section class="contato-bg" data-anime="scroll">
+  <section class="contato-bg">
     <div class="contato-conteudo container" id="contato">
       <p class="font-montserrat cor-4">Como chegar</p>
       <h1 class="font-poppins cor-1">Nossos Endereços</h1>
       <div class="iframe-grid">
         <div class="iframe-1 cor-1">
-          <iframe
+          <iframe data-anime="scroll-left"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d986.1837813209066!2d-37.1556076!3d-8.6214082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x707fba65fecc31d%3A0xc0a412beb4b2ca48!2sCARLOS%20ARA%C3%9AJO%20ADVOCACIA!5e0!3m2!1spt-BR!2sbr!4v1721342106313!5m2!1spt-BR!2sbr"
             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -264,7 +264,7 @@
           </ul>
         </div>
         <div class="iframe-2 cor-1">
-          <iframe
+          <iframe data-anime="scroll-right"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d986.6990846883765!2d-37.0598041413136!3d-8.421652099968767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a81bd4b9cf407f%3A0x83cfa429ae68458d!2sCARLOS%20AR%C3%81UJO%20ADVOCACIA!5e0!3m2!1spt-BR!2sbr!4v1721342185079!5m2!1spt-BR!2sbr"
             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
