--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <p class="font-poppins cor-0">Insalubridade/Periculosidade</p>
         <p class="font-poppins cor-0">Acidente de Trabalho</p>
       </li>
-      <li>
+      <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Tributário</h1>
         <p class="font-poppins cor-0 ">Análise de incentivos fiscais (obter incentivos fiscais)</p>
@@ -95,7 +95,7 @@
         <p class="font-poppins cor-0">Defesas administrativas</p>
         <p class="font-poppins cor-0">Planejamento tributário</p>
       </li>
-      <li>
+      <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Empresarial</h1>
         <p class="font-poppins cor-0 ">Constituição da empresa</p>
@@ -103,7 +103,7 @@
         <p class="font-poppins cor-0">Resolução de conflitos entre os sócios</p>
         <p class="font-poppins cor-0">Criação de estruturas de proteção patrimonial</p>
       </li>
-      <li>
+      <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Cobrança Judicial</h1>
         <p class="font-poppins cor-0 ">Cobrança de Condomínios e Empresas</p>
@@ -111,7 +111,7 @@
         <p class="font-poppins cor-0">Negociações de Dívidas</p>
         <p class="font-poppins cor-0">Cobranças de Cheques e Duplicatas</p>
       </li>
-      <li>
+      <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Divórcio</h1>
         <p class="font-poppins cor-0 ">Divorcio amigável em Cartório</p>
