--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
   <section class="introducao-bg">
     <div class="introducao-conteudo container">
-      <span class="font-poppins span-oab">OAB/PE -000.00 - PE</span>
-      <p class="font-poppins">Mais de 10 anos defendendo seus direitos com respeito e transparência.</p>
-      <a href="./"><button class="btn1 font-poppins">Agendar <span>(Escritório Buíque)</span></button></a>
-      <a href="./"><button class="btn2 font-poppins">Agendar <span>(Escritório Arcoverde)</span></button></a>
+      <span class="font-poppins span-oab fadeInDown" data-anime="700">OAB/PE -000.00 - PE</span>
+      <p class="font-poppins fadeInDown" data-anime="400">Mais de 10 anos defendendo seus direitos com respeito e transparência.</p>
+      <a href="./"><button class="btn1 font-poppins fadeInDown" data-anime="900">Agendar <span>(Escritório Buíque)</span></button></a>
+      <a href="./"><button class="btn2 font-poppins fadeInDown" data-anime="900">Agendar <span>(Escritório Arcoverde)</span></button></a>
       <div class="orcamento">
         <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
       </div>
