--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <section class="area-atuacao-bg area-atuacao">
     <ul class="area-atuacao-lista container" id="area-atuacao">
-      <li>
+      <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Previdenciário</h1>
         <p class="font-poppins cor-0 ">Aposentadoria Por Tempo de Serviço</p>
@@ -63,7 +63,7 @@
         <p class="font-poppins cor-0">Aposentadoria por Idade</p>
         <p class="font-poppins cor-0">Aposentadoria Rural Loas/BPC</p>
       </li>
-      <li>
+      <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Criminal</h1>
         <p class="font-poppins cor-0 ">Flagrante delito</p>
@@ -71,7 +71,7 @@
         <p class="font-poppins cor-0">Inquérito policial</p>
         <p class="font-poppins cor-0">Transação Penal e Suspensão Condicional do Processo</p>
       </li>
-      <li>
+      <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Inventário e Herança</h1>
         <p class="font-poppins cor-0 ">Divisão entre os Herdeiros</p>
@@ -79,7 +79,7 @@
         <p class="font-poppins cor-0">Regularização dos Documentos</p>
         <p class="font-poppins cor-0">Valorização dos Bens na Hora da Venda</p>
       </li>
-      <li>
+      <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Trabalhista</h1>
         <p class="font-poppins cor-0 ">Trabalho sem Registro</p>
