--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="introducao-conteudo container">
       <span class="font-poppins span-oab fadeInDown" data-anime="700">OAB/PE -000.00 - PE</span>
       <p class="font-poppins fadeInDown" data-anime="400">Mais de 10 anos defendendo seus direitos com respeito e transparência.</p>
-      <a href="./"><button class="btn1 font-poppins fadeInLeft" data-anime="900">Agendar <span>(Escritório Buíque)</span></button></a>
-      <a href="./"><button class="btn2 font-poppins fadeInLeft" data-anime="900">Agendar <span>(Escritório Arcoverde)</span></button></a>
+      <a href="https://wa.me/5587981740303" target="_blank"><button class="btn1 font-poppins fadeInLeft" data-anime="900">Agendar <span>(Escritório Buíque)</span></button></a>
+      <a href="https://wa.me/5587999066958" target="_blank"><button class="btn2 font-poppins fadeInLeft" data-anime="900">Agendar <span>(Escritório Arcoverde)</span></button></a>
       <div class="orcamento">
         <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
       </div>
@@ -140,8 +140,8 @@
           objetivo é garantir seu conforto e segurança, tendo a certeza de que seu caso está nas mãos de profissionais
           competentes. Estamos prontos para oferecer a representação jurídica necessária e buscar as melhores soluções
           para suas demandas legais.</p>
-          <a href="./"><button class="btn1 font-poppins">Agendar <span>(Escritório Buíque)</span></button></a>
-          <a href="./"><button class="btn2 font-poppins">Agendar <span>(Escritório Arcoverde)</span></button></a>
+          <a href="https://wa.me/5587981740303" target="_blank"><button class="btn1 font-poppins">Agendar <span>(Escritório Buíque)</span></button></a>
+          <a href="https://wa.me/5587999066958" target="_blank"><button class="btn2 font-poppins">Agendar <span>(Escritório Arcoverde)</span></button></a>
       </div>
     </div>
   </section>
@@ -158,15 +158,15 @@
             <p class="font-poppins">Especialista em direito criminal</p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
-                <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
-                <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
-                <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+                <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+                <a href="https://www.instagram.com/carlosaraujo_advocacia/" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
+                <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
             </div>
             <div class="contato-pessoal-arcoverde">
               <p class="font-montserrat">Arcoverde</p>
-              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
-              <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
-              <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+              <a href="https://wa.me/5587999066958" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+              <a href="https://www.instagram.com/carlosaraujoadv.arcoverde/" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
             </div>
           </div>
         </li>
@@ -178,15 +178,15 @@
             <p class="font-poppins">Especialista em direito previdenciário</p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
-                <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
-                <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
-                <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+              <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+              <a href="https://www.instagram.com/carlosaraujo_advocacia/" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
             </div>
             <div class="contato-pessoal-arcoverde">
               <p class="font-montserrat">Arcoverde</p>
-              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
-              <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
-              <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+              <a href="https://wa.me/5587999066958" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+              <a href="https://www.instagram.com/carlosaraujoadv.arcoverde/" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
             </div>
           </div>
           <div class="grid-colum-2"><img src="images/advg-2.jpeg" data-anime="scroll-up" alt="advogado"></div>
@@ -200,15 +200,15 @@
             <p class="font-poppins">Especialista em direito trabalhista</p>
             <div class="contato-pessoal-buique">
               <p class="font-montserrat">Buíque</p>
-                <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
-                <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
-                <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+              <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+              <a href="https://www.instagram.com/carlosaraujo_advocacia/" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
             </div>
             <div class="contato-pessoal-arcoverde">
               <p class="font-montserrat">Arcoverde</p>
-              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
-              <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
-              <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+              <a href="https://wa.me/5587999066958" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
+              <a href="https://www.instagram.com/carlosaraujoadv.arcoverde/" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
+              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
             </div>
           </div>
         </li>
@@ -259,7 +259,7 @@
               <p class="font-poppins icon-cidade">CEP 56520-000</p>
             </li>
             <li>
-              <p class="font-poppins icon-tel">(87)99999-9999</p>
+              <p class="font-poppins icon-tel"><a href="tel:+5587981740303">(87)98174-0303</a></p>
             </li>
           </ul>
         </div>
@@ -281,7 +281,7 @@
                 <p class="font-poppins icon-cidade">CEP 56509-240</p>
               </li>
               <li>
-                <p class="font-poppins icon-tel">(87)99999-9999</p>
+                <p class="font-poppins icon-tel"><a href="tel:+5587999066958">(87)99906-6958</a></p>
               </li>
             </ul>
           </div>
@@ -296,9 +296,9 @@
       <div class="footer-contato">
         <h1 class="font-poppins cor-0">contatos</h1>
         <ul>
-          <p class="font-poppins cor-0">(87)99999-9999</p>
-          <p class="font-poppins cor-0">(87)99999-9999</p>
-          <p class="font-poppins cor-0">contato@hotmail.com</p>
+          <p class="font-poppins cor-0"><a href="tel:+5587981740303">(87)98174-0303</a></p>
+          <p class="font-poppins cor-0"><a href="tel:+5587999066958">(87)99906-6958</a></p>
+          <p class="font-poppins cor-0"><a href="mailto:contato@advaraujo.adv.br" target="_blank">contato@advaraujo.adv.br</p>
         </ul>
       </div>
       <div class="footer-redes">
