--- a/index.html
+++ b/index.html
@@ -298,13 +298,15 @@
         <ul>
           <p class="font-poppins cor-0"><a href="tel:+5587981740303">(87)98174-0303</a></p>
           <p class="font-poppins cor-0"><a href="tel:+5587999066958">(87)99906-6958</a></p>
-          <p class="font-poppins cor-0"><a href="mailto:contato@advaraujo.adv.br" target="_blank">contato@advaraujo.adv.br</p>
+          <a  class="font-poppins cor-0" href="mailto:contato@advaraujo.adv.br" target="_blank">contato@advaraujo.adv.br</a>
         </ul>
       </div>
-      <div class="footer-redes">
-        <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
-        <a href="#" target="_blank"><img src="icons/icon-instagram-5.png" alt="instagram"></a>
-        <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email-2.png" alt="email"></a>
+      <div class="footer-atendimento">
+        <h1 class="font-poppins cor-0">Atendimento</h1>
+        <p class="font-poppins cor-0">Horário de Funcionamento</p>
+        <p class="font-poppins cor-0">Buíque - Segunda a Sexta <br> 8h às 12h <br> 13:30 às 17h</p>
+
+        <p class="font-poppins cor-0">Arcoverde - Segunda a Sexta <br> 9h às 12h<br> 14h às 18h</p>
       </div>
     </div>
   </footer>
