--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="icons/logo-4.jpg" type="image/x-icon">
   <link rel="stylesheet" href="estilos/style.css">
   <script>document.documentElement.className += ' js';</script>
   <meta name="description" content="Mais de 10 anos defendendo seus direitos com respeito e transparência">
